src/main/java/org/example/profiruparser/errors/InvalidCredentialsException.java
package org.example.profiruparser.errors;

public class InvalidCredentialsException extends RuntimeException {
    public InvalidCredentialsException(String message) {
        super(message);
    }
}
